--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite --host --mode dev",
+    "build": "tsc && vite build --mode production",
     "preview": "vite preview",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
@@ -13,10 +13,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "pinia": "^2.1.7",
+    "qs": "^6.13.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
-    "vuetify": "^3.7.0-beta.1"
+    "vuetify": "3.7.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
@@ -25,6 +27,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "gh-pages": "^6.1.1",
+    "normalize.css": "^8.0.1",
     "prettier": "^3.2.5",
     "sass": "^1.78.0",
     "sass-embedded": "^1.78.0",
